--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,8 @@
 {
     "/css/style.css": "/css/style.css",
+    "/css/app.css": "/css/app.css",
+    "/css/fontawesome.css": "/css/fontawesome.css",
     "/js/jquery.js": "/js/jquery.js",
+    "/js/app.js": "/js/app.js",
     "/js/bootstrap.js": "/js/bootstrap.js"
 }
